--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ markdown = "*"
 django-filter = "*"
 django-cors-headers = "*"
 "psycopg2" = "*"
+celery = "*"
+redis = "*"
+requests = "*"
+gunicorn = "*"
 
 [dev-packages]
 pylint = "*"
