Token based auth

--- a/project/frontend/.eslintrc
+++ b/project/frontend/.eslintrc
@@ -6,5 +6,11 @@
   "globals": {
     "fetch": false
   },
+  "env": {
+    "browser": true
+  },
+  "rules": {
+    "no-console": "off"
+  },
   "extends": ["eslint:recommended", "plugin:react/recommended"]
 }
