--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -8,11 +8,13 @@
     }
   },
   "dependencies": {
+    "chart.js": "^1.1.1",
     "immutability-helper": "^2.7.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
+    "react-chartjs": "^1.2.0",
     "react-cookie": "^2.2.0",
     "react-dom": "^16.4.0",
     "react-router": "^4.2.0",
