--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-table-next": "^3.1.3",
     "react-chartjs": "^1.2.0",
     "react-cookie": "^2.2.0",
     "react-dom": "^16.4.0",
